# Hakeem

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-cuda  Hakeem_Documentation_Log_v4.docx  MedGemma_finetune_it_round_1.ipynb  MedGemma_finetune_it_round_2.ipynb  PIPELINE_optimized.py  README.md  REPORT_AR.docx  benchmark_T323.ipynb  config.py  config.yaml  docker-compose.yml  downloader.py  frontend-requirements.txt  pipeline-streaming.py  pipeline.py  reqirements.py  requirements.txt  wake_word_client.py
Docker-files/: .env.example  CHANGELOG.md  Dockerfile  README.md  config.baremetal.example  config.py  config.yaml  docker-compose.yml  downloader.py  pipeline-streaming.py  pipeline.py  reqirements.py  requirements.txt
MCP-servers/Drug-DB-MCP/: Database_mcp.py
MCP-servers/Open-zim/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
MCP-servers/Open-zim/src/zim_mcp/: config.py  server.py
MCP-servers/mamogram-mcp-filter/: filter-V3.2.py  mcp_filter.py
Scripts_and_Docs/: Hakeem_benshmark__results.json  MedGemma_finetune_fullshot.ipynb  MedGemma_finetune_it_round_1.ipynb  T323_Logbook.docx  T323_Report.docx  benchmark_T323.ipynb
docs/: API.md  CONFIG.md  DEVELOPER.md  DEVELOPER_AR.md  IMPROVEMENT_PLAN.md  JUDGES.md  JUDGES_AR.md  TROUBLESHOOTING.md  USER.md  USER_AR.md
examples/: .env.example  config.docker.yaml.example  config.local.yaml.example  config.yaml.example
src/: __init__.py  config.py  mcp.py  shared.py
website/: .nav-links  ABOUT.md  app.js  app.py  chat.css  chat.html  chat.js  index.html  requirements.txt  style.css
(+39 files in other folders)
